<resources>
    <string name="app_name">第9章課題:K023C0039</string>
    <string name="tv_name">名前:</string>
    <string name="tv_HaveMoney">所持金:</string>
    <string name="bt_game_store">ゲーム屋</string>
    <string name="bt_seven_store">セブン</string>
    <string name="bank">銀行</string>
    <string name="shop">ショップ</string>
    <string name="seven_shop">セブンショップ</string>
    <string name="game_shop">ゲームショップ</string>
    <string name="bt_return">最初の画面に戻る</string>
    <string name="conf_text_false">所持金がたりません。</string>
    <string name="conf_text_True">ご購入ありがとうございます。</string>
    <string name="drawer">引き出し</string>
    <string name="confirm">確認</string>
    <string name="back">戻る</string>
    <string name="list_back">リストに戻る</string>
    <string name="bank_message">円引き出しました</string>
    <string name="error_message">正の整数値を入力してください</string>
    <string name="menu_food">食品</string>
    <string name="menu_daily">日用品</string>
    <string name="menu_service">サービス</string>
    <string name="action_game">アクション</string>
    <string name="RPG_game">RPG</string>
    <string name="family_game">ファミリー</string>
    <string name="menu_list_options_desc">説明を表示</string>
    <string name="menu_list_options_order">注文</string>
    <string name="menu_list_options_header">操作を選んでください</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>